# Website-Blocker

./: .gitignore  CMakeLists.txt  README.md
include/: config.h
resources/: styles.qrc
src/: main.cpp
src/core/: Blocker.cpp  Blocker.h  HostsManager.cpp  HostsManager.h  Settings.cpp  Settings.h
src/gui/: MainWindow.cpp  MainWindow.h
src/gui/components/: SettingsDialog.cpp  SettingsDialog.h
